--- a/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
+++ b/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sprint 6. Algoritmes d’aprenentatge supervisat: Regressió.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZcnwZ+IlvyQZL1fIqYR+F",
+      "authorship_tag": "ABX9TyNcuYFolR+oouvyBd/it1kF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,211 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EzrT_EOqi_ru"
       },
       "outputs": [],
       "source": [
-        ""
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt \n",
+        "\n",
+        "import pandas as pd  \n",
+        "import seaborn as sns \n",
+        "\n",
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_boston\n",
+        "boston_dataset = load_boston()"
+      ],
+      "metadata": {
+        "id": "PMs9-I9djkVa",
+        "outputId": "6999ceed-ebf4-415b-93a1-9795d4b1cecf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+            "\n",
+            "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+            "    the documentation of this function for further details.\n",
+            "\n",
+            "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+            "    dataset unless the purpose of the code is to study and educate about\n",
+            "    ethical issues in data science and machine learning.\n",
+            "\n",
+            "    In this special case, you can fetch the dataset from the original\n",
+            "    source::\n",
+            "\n",
+            "        import pandas as pd\n",
+            "        import numpy as np\n",
+            "\n",
+            "\n",
+            "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+            "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+            "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+            "        target = raw_df.values[1::2, 2]\n",
+            "\n",
+            "    Alternative datasets include the California housing dataset (i.e.\n",
+            "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+            "    dataset. You can load the datasets as follows::\n",
+            "\n",
+            "        from sklearn.datasets import fetch_california_housing\n",
+            "        housing = fetch_california_housing()\n",
+            "\n",
+            "    for the California housing dataset and::\n",
+            "\n",
+            "        from sklearn.datasets import fetch_openml\n",
+            "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+            "\n",
+            "    for the Ames housing dataset.\n",
+            "    \n",
+            "  warnings.warn(msg, category=FutureWarning)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Activo Google Drive\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "f84MRzMGjslY",
+        "outputId": "56fc135b-c41c-4b12-d37e-689de34c221b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Abro el fichero\n",
+        "\n",
+        "#path='https://drive.google.com/file/d/1j8WdhTxMpngrUigfcfrJynng-9JHo9xa/view?usp=sharing'\n",
+        "path = ('/content/drive/MyDrive/01_COLAB/housing data.csv')\n",
+        "#data = pd.read_csv(file,\n",
+        "    \n",
+        "df=  pd.read_csv(path, sep=',', encoding=\"latin-1\")\n",
+        "df.shape\n",
+        "\n",
+        "nRow, nCol = df.shape\n",
+        "print(f'Hay  {nRow} filas con {nCol} columnas')\n",
+        "df1=df.copy()\n",
+        "print('\\nImprimo el primer registro, solo para ver como es:\\n')\n",
+        "df1.iloc[0]"
+      ],
+      "metadata": {
+        "id": "QULoGQXenqdI",
+        "outputId": "4870b996-2895-42ea-a539-552999f0894d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hay  505 filas con 14 columnas\n",
+            "\n",
+            "Imprimo el primer registro, solo para ver como es:\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.00632      0.02731\n",
+              "18.00        0.00000\n",
+              "2.310        7.07000\n",
+              "0            0.00000\n",
+              "0.5380       0.46900\n",
+              "6.5750       6.42100\n",
+              "65.20       78.90000\n",
+              "4.0900       4.96710\n",
+              "1            2.00000\n",
+              "296.0      242.00000\n",
+              "15.30       17.80000\n",
+              "396.90     396.90000\n",
+              "4.98         9.14000\n",
+              "24.00       21.60000\n",
+              "Name: 0, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Asigno una lista con los nombres de las columnas\n",
+        "Nombre_Columnas = ['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV']\n",
+        "\n",
+        "df1.columns = [Nombre_Columnas]\n",
+        "df1.iloc[0]"
+      ],
+      "metadata": {
+        "id": "oqAX6aYooBqn",
+        "outputId": "d564ed4d-9f9f-45bb-e800-18548d75fabe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CRIM         0.02731\n",
+              "ZN           0.00000\n",
+              "INDUS        7.07000\n",
+              "CHAS         0.00000\n",
+              "NOX          0.46900\n",
+              "RM           6.42100\n",
+              "AGE         78.90000\n",
+              "DIS          4.96710\n",
+              "RAD          2.00000\n",
+              "TAX        242.00000\n",
+              "PTRATIO     17.80000\n",
+              "B          396.90000\n",
+              "LSTAT        9.14000\n",
+              "MEDV        21.60000\n",
+              "Name: 0, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
       ]
     }
   ]
