--- a/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
+++ b/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Sprint 6. Algoritmes d’aprenentatge supervisat: Regressió.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMV3CnI0tdktgrjFLljryTo",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMbOBLh/supQciKpAjgPdln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -885,12 +886,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "SoDmbGZW6Vmt",
-        "outputId": "f959874c-62ab-4778-afec-cfa338f94094",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 417
-        }
+        },
+        "id": "SoDmbGZW6Vmt",
+        "outputId": "f959874c-62ab-4778-afec-cfa338f94094"
       },
       "execution_count": 81,
       "outputs": [
@@ -918,12 +919,12 @@
         "sns.boxplot(df2['RAD'], df2['MEDV'])"
       ],
       "metadata": {
-        "id": "LmBnAYMB-BOY",
-        "outputId": "0d3bd10e-83ff-4aa2-edcb-2adff1584940",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
-        }
+        },
+        "id": "LmBnAYMB-BOY",
+        "outputId": "0d3bd10e-83ff-4aa2-edcb-2adff1584940"
       },
       "execution_count": 95,
       "outputs": [
@@ -961,11 +962,11 @@
         "df1['MEDV'],"
       ],
       "metadata": {
-        "id": "-K8H9N827zAy",
-        "outputId": "a9810af6-07f5-4ae9-f01e-2ea745dadb25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-K8H9N827zAy",
+        "outputId": "a9810af6-07f5-4ae9-f01e-2ea745dadb25"
       },
       "execution_count": 85,
       "outputs": [
@@ -1002,12 +1003,12 @@
         "df1"
       ],
       "metadata": {
-        "id": "Mx_XW8-s7UsX",
-        "outputId": "7b024c38-49e6-4052-f00b-e4ccc00415ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "Mx_XW8-s7UsX",
+        "outputId": "7b024c38-49e6-4052-f00b-e4ccc00415ad"
       },
       "execution_count": 89,
       "outputs": [
@@ -1390,7 +1391,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 355
+          "height": 306
         },
         "id": "7Sk6062Zr-rR",
         "outputId": "53d641b0-0d32-4b51-f9fa-34b763d473a8"
@@ -1576,12 +1577,12 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "yIyQtBgvyYPg",
-        "outputId": "2947e7b6-4ed7-417a-d8da-e45367c65266",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 393
-        }
+        },
+        "id": "yIyQtBgvyYPg",
+        "outputId": "2947e7b6-4ed7-417a-d8da-e45367c65266"
       },
       "execution_count": 57,
       "outputs": [
@@ -1683,12 +1684,12 @@
         "print(m.summary())"
       ],
       "metadata": {
-        "id": "astiCTsA4HNt",
-        "outputId": "1578c988-3aca-48c0-ec16-6518fd6f6ff4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436
-        }
+        },
+        "id": "astiCTsA4HNt",
+        "outputId": "1578c988-3aca-48c0-ec16-6518fd6f6ff4"
       },
       "execution_count": 69,
       "outputs": [
@@ -1745,12 +1746,12 @@
         "print(m.summary())"
       ],
       "metadata": {
-        "id": "JIioNMXU4cYo",
-        "outputId": "6e61e1de-18e9-4b8d-e0d4-b9e60a3b070c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 362
-        }
+        },
+        "id": "JIioNMXU4cYo",
+        "outputId": "6e61e1de-18e9-4b8d-e0d4-b9e60a3b070c"
       },
       "execution_count": 74,
       "outputs": [
@@ -1778,12 +1779,12 @@
         "  results = ols('y ~ x', data).fit()"
       ],
       "metadata": {
-        "id": "AAN6Gp945esg",
-        "outputId": "1503f021-f825-4bc4-c832-496ab2818029",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 362
-        }
+        },
+        "id": "AAN6Gp945esg",
+        "outputId": "1503f021-f825-4bc4-c832-496ab2818029"
       },
       "execution_count": 77,
       "outputs": [
@@ -1826,26 +1827,51 @@
       "metadata": {
         "id": "tXmrOh3jCUgB"
       },
-      "execution_count": 100,
+      "execution_count": 133,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Random Forest "
+      ],
+      "metadata": {
+        "id": "THzZgDxZLGGU"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
         "feats = ['LSTAT', 'RM']\n",
         "m = RandomForestRegressor(n_jobs = -1, oob_score = True)\n",
         "m.fit(X_train, Y_train)\n",
-        "print(m)"
+        "print('m: ', m)\n",
+        "feat_imps = m.feature_importances_\n",
+        "\n",
+        "print(' feat_imps', feat_imps)\n",
+        "\n",
+        "score = round(m.score(X_train, Y_train),2)\n",
+        "print('Score: ', score)\n",
+        "\n",
+        "ypredict = (m.predict(X_test))\n",
+        "Y_test=Y_test.to_numpy()\n",
+        "\n",
+        "type(ypredict)\n",
+        "type(Y_test)\n",
+        "mae = np.mean(np.absolute(Y_test - ypredict))\n",
+        "#mae= np.absolute (Y_test - ypredict)\n",
+        "#mae_percent = np.mean(np.absolute(ytest - ypredict) / ytest)"
       ],
       "metadata": {
-        "id": "x6t7BqT9AYAR",
-        "outputId": "4c56d416-9f42-4523-c3e7-66b3f5044fc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x6t7BqT9AYAR",
+        "outputId": "a6d87520-7110-4630-9a4c-47f101559162"
       },
-      "execution_count": 105,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -1859,10 +1885,42 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "RandomForestRegressor(n_jobs=-1, oob_score=True)\n"
+            "m:  RandomForestRegressor(n_jobs=-1, oob_score=True)\n",
+            " feat_imps [0.5400141 0.4599859]\n",
+            "Score:  0.96\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " clf = RandomForestRegressor()\n",
+        "    clf.fit(xtrain, ytrain)\n",
+        "\n",
+        "    score = clf.score(xtest, ytest)\n",
+        "\n",
+        "    feat_imps = clf.feature_importances_\n",
+        "\n",
+        "    ypredict = clf.predict(xtest)\n",
+        "\n",
+        "\n",
+        "    mae = np.mean(np.absolute(ytest - ypredict))\n",
+        "    mae_percent = np.mean(np.absolute(ytest - ypredict) / ytest)\n",
+        "    return (\n",
+        "      \n",
+        "        \"R^2 is \",\n",
+        "        score,\n",
+        "        \"MAE is \",\n",
+        "        mae,\n",
+        "        \"MAE percent is \",\n",
+        "        mae_percent,\n",
+        "        \"Feature Importances are \",\n",
+        "        zip(feature_names, feat_imps),"
+      ],
+      "metadata": {
+        "id": "Nhf5jON3ERQv"
+      }
     },
     {
       "cell_type": "markdown",
