--- a/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
+++ b/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
@@ -6,7 +6,7 @@
       "name": "Sprint 6. Algoritmes d’aprenentatge supervisat: Regressió.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJ56do75qwTUBIPTNVTbBx",
+      "authorship_tag": "ABX9TyOKjShWdXVPkHV31iturx/5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1934,10 +1934,10 @@
       ],
       "metadata": {
         "id": "DzZPBQfHsCUV",
-        "outputId": "47ef975a-8453-4b86-cf13-9ad9e02aef66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47ef975a-8453-4b86-cf13-9ad9e02aef66"
       },
       "execution_count": 36,
       "outputs": [
@@ -2729,7 +2729,7 @@
         "outputId": "2b1b588c-7fb0-48e7-d23f-b78f50ff7001",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 582
         }
       },
       "execution_count": 49,
@@ -3328,6 +3328,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#display adjusted R-squared\n",
+        "print(modelo_final_RN.rsquared_adj)"
+      ],
+      "metadata": {
+        "id": "6jXoLuZ4c07r",
+        "outputId": "12554158-1074-4912-e8ad-998687f8f78c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-81-ff2190bda183>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#display adjusted R-squared\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodelo_final_RN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrsquared_adj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Pipeline' object has no attribute 'rsquared_adj'"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Conclusión de los residuos:\n",
@@ -3438,10 +3467,10 @@
       ],
       "metadata": {
         "id": "19g5shwm17HQ",
-        "outputId": "d20927f5-c4af-42e5-dd0e-494741fee339",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d20927f5-c4af-42e5-dd0e-494741fee339"
       },
       "execution_count": 58,
       "outputs": [
@@ -3620,6 +3649,38 @@
     {
       "cell_type": "code",
       "source": [
+        "print('Parametros de:')\n",
+        "print(modelo_2.params)\n",
+        "\n",
+        "\n",
+        "print('R square adjusted es ', round(modelo_2.rsquared_adj,2))"
+      ],
+      "metadata": {
+        "id": "VaHbwrLofDUh",
+        "outputId": "5674f105-7d59-4b1d-9032-1051dac32c22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Parametros de:\n",
+            "0    0.762286\n",
+            "1   -0.688384\n",
+            "2    4.887685\n",
+            "dtype: float64\n",
+            "R square adjusted es  0.64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Llamo a la subrutina de grafico de los residuos\n",
         "\n",
         "print('Estudio del residuo de MLR polinómica:')\n",
@@ -3653,6 +3714,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Explicación de los residuos MLR polinómico"
+      ],
+      "metadata": {
+        "id": "83QykAeFePTT"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3749,6 +3819,33 @@
           "text": [
             "(101,)\n",
             "(101, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(modelo.params)\n",
+        "print(modelo.rsquared_adj)"
+      ],
+      "metadata": {
+        "id": "HK3YarMHeo04",
+        "outputId": "94560cca-cab0-48f0-bd66-8189f8a1d8e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LSTAT   -0.680739\n",
+            "RM       4.992741\n",
+            "dtype: float64\n",
+            "0.9460164899129764\n"
           ]
         }
       ]
