--- a/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
+++ b/Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
@@ -6,7 +6,7 @@
       "name": "Sprint 6. Algoritmes d’aprenentatge supervisat: Regressió.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMQupztPX4BTfCGovnlaK6u",
+      "authorship_tag": "ABX9TyOxd93qhV4FAuQs8aRDAQML",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3039,11 +3039,11 @@
         "print('mean_squared_error MLR: ', mse_2)"
       ],
       "metadata": {
-        "id": "VTm0xdoBk3HY",
-        "outputId": "a61c2835-82ad-493b-8475-6f3bb3524e2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VTm0xdoBk3HY",
+        "outputId": "a61c2835-82ad-493b-8475-6f3bb3524e2a"
       },
       "execution_count": 114,
       "outputs": [
@@ -3203,8 +3203,10 @@
       "source": [
         "X = pd.DataFrame(np.c_[df1['LSTAT'], df1['RM']], columns = ['LSTAT','RM'])\n",
         "\n",
-        "trans = PolynomialFeatures(degree=1)\n",
+        "trans = PolynomialFeatures(degree=2)\n",
         "X_Polinomica = trans.fit_transform(X)\n",
+        "\n",
+        "X_Polinomica = trans.transform(X)\n",
         "X_Polinomica = pd.DataFrame(X_Polinomica)\n",
         " \n",
         "\n",
@@ -3219,20 +3221,20 @@
         "print(Y_test.shape)\n"
       ],
       "metadata": {
-        "outputId": "f2bf0c6b-8670-4650-f189-7990b65f6b7e",
+        "outputId": "e90c0374-5f26-4505-9130-9e46158abd06",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcXHSxhjcUy6"
       },
-      "execution_count": 58,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(404, 3)\n",
-            "(101, 3)\n",
+            "(404, 6)\n",
+            "(101, 6)\n",
             "(404,)\n",
             "(101,)\n"
           ]
@@ -3246,12 +3248,12 @@
       ],
       "metadata": {
         "id": "mEvXBPpKmIlO",
-        "outputId": "859284bf-2f03-47c8-804a-d799e704bd6f",
+        "outputId": "b12f3722-1e8f-4e23-d5c7-43ff93a5b3dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -3259,14 +3261,17 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "Int64Index: 404 entries, 248 to 355\n",
-            "Data columns (total 3 columns):\n",
+            "Data columns (total 6 columns):\n",
             " #   Column  Non-Null Count  Dtype  \n",
             "---  ------  --------------  -----  \n",
             " 0   0       404 non-null    float64\n",
             " 1   1       404 non-null    float64\n",
             " 2   2       404 non-null    float64\n",
-            "dtypes: float64(3)\n",
-            "memory usage: 12.6 KB\n"
+            " 3   3       404 non-null    float64\n",
+            " 4   4       404 non-null    float64\n",
+            " 5   5       404 non-null    float64\n",
+            "dtypes: float64(6)\n",
+            "memory usage: 22.1 KB\n"
           ]
         }
       ]
@@ -3274,25 +3279,23 @@
     {
       "cell_type": "code",
       "source": [
-        "## Without a constant\n",
-        "\n",
-        "#import statsmodels.api as sm\n",
+        "## Sin constante\n",
         "\n",
         "modelo_2 = sm.OLS(Y_train_Polinomica, X_train_Polinomica).fit()\n",
         "\n",
         "predictions = modelo_2.predict(X_test_Polinomica) # make the predictions by the model\n",
         "\n",
-        "# Print out the statistics\n",
+        "# Imprimimos el resumen del modelo\n",
         "print(modelo_2.summary())"
       ],
       "metadata": {
         "id": "aqEkAWLckxHN",
-        "outputId": "b7eea9ff-4f22-4e72-df6c-c3722df4549f",
+        "outputId": "d74401e2-3bab-4b17-c886-81a9b50c78ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "stream",
@@ -3300,30 +3303,35 @@
           "text": [
             "                            OLS Regression Results                            \n",
             "==============================================================================\n",
-            "Dep. Variable:                   MEDV   R-squared:                       0.638\n",
-            "Model:                            OLS   Adj. R-squared:                  0.636\n",
-            "Method:                 Least Squares   F-statistic:                     353.1\n",
-            "Date:                Wed, 27 Jul 2022   Prob (F-statistic):           3.61e-89\n",
-            "Time:                        06:08:00   Log-Likelihood:                -1279.4\n",
-            "No. Observations:                 404   AIC:                             2565.\n",
-            "Df Residuals:                     401   BIC:                             2577.\n",
-            "Df Model:                           2                                         \n",
+            "Dep. Variable:                   MEDV   R-squared:                       0.749\n",
+            "Model:                            OLS   Adj. R-squared:                  0.746\n",
+            "Method:                 Least Squares   F-statistic:                     237.6\n",
+            "Date:                Wed, 27 Jul 2022   Prob (F-statistic):          4.61e-117\n",
+            "Time:                        09:38:31   Log-Likelihood:                -1205.3\n",
+            "No. Observations:                 404   AIC:                             2423.\n",
+            "Df Residuals:                     398   BIC:                             2447.\n",
+            "Df Model:                           5                                         \n",
             "Covariance Type:            nonrobust                                         \n",
             "==============================================================================\n",
             "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
             "------------------------------------------------------------------------------\n",
-            "0              0.7623      3.673      0.208      0.836      -6.459       7.984\n",
-            "1             -0.6884      0.051    -13.486      0.000      -0.789      -0.588\n",
-            "2              4.8877      0.513      9.534      0.000       3.880       5.896\n",
+            "0             67.0117     17.451      3.840      0.000      32.704     101.320\n",
+            "1              0.1454      0.586      0.248      0.804      -1.007       1.298\n",
+            "2            -16.4202      4.749     -3.457      0.001     -25.757      -7.083\n",
+            "3              0.0118      0.006      2.043      0.042       0.000       0.023\n",
+            "4             -0.2130      0.074     -2.880      0.004      -0.358      -0.068\n",
+            "5              1.7715      0.330      5.372      0.000       1.123       2.420\n",
             "==============================================================================\n",
-            "Omnibus:                      110.056   Durbin-Watson:                   2.043\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              304.962\n",
-            "Skew:                           1.288   Prob(JB):                     6.00e-67\n",
-            "Kurtosis:                       6.388   Cond. No.                         200.\n",
+            "Omnibus:                      129.415   Durbin-Watson:                   1.987\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1429.981\n",
+            "Skew:                           1.018   Prob(JB):                    3.05e-311\n",
+            "Kurtosis:                      11.989   Cond. No.                     2.45e+04\n",
             "==============================================================================\n",
             "\n",
             "Warnings:\n",
-            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The condition number is large, 2.45e+04. This might indicate that there are\n",
+            "strong multicollinearity or other numerical problems.\n"
           ]
         }
       ]
