--- a/2_Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
+++ b/2_Sprint_6_Algoritmes_d’aprenentatge_supervisat_Regressió.ipynb
@@ -6,7 +6,7 @@
       "name": "Sprint 6. Algoritmes d’aprenentatge supervisat: Regressió.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBEEW+yUdySEOkD8v3G2xQ",
+      "authorship_tag": "ABX9TyPwmZnuely4ax+Y01QCjh0v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3435,11 +3435,11 @@
       ],
       "metadata": {
         "id": "aqEkAWLckxHN",
-        "outputId": "97ce2279-fe73-4d5a-f896-66fcdee77856",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "outputId": "97ce2279-fe73-4d5a-f896-66fcdee77856"
       },
       "execution_count": 72,
       "outputs": [
@@ -3467,10 +3467,10 @@
       ],
       "metadata": {
         "id": "VaHbwrLofDUh",
-        "outputId": "4b0602cb-ced2-48dc-c888-61771ea2323c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4b0602cb-ced2-48dc-c888-61771ea2323c"
       },
       "execution_count": 73,
       "outputs": [
@@ -3506,11 +3506,11 @@
       ],
       "metadata": {
         "id": "MNU6UinZnkVm",
-        "outputId": "db7d99b3-7d62-45cc-c0bd-6a972ef665d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 599
-        }
+        },
+        "outputId": "db7d99b3-7d62-45cc-c0bd-6a972ef665d0"
       },
       "execution_count": 71,
       "outputs": [
@@ -3642,11 +3642,11 @@
         "print('mean_squared_error; ', mse_2)"
       ],
       "metadata": {
-        "id": "qQGbOQo_8eaZ",
-        "outputId": "639d7578-a893-400f-afb7-a46afdf00f4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qQGbOQo_8eaZ",
+        "outputId": "639d7578-a893-400f-afb7-a46afdf00f4e"
       },
       "execution_count": 83,
       "outputs": [
@@ -3688,11 +3688,11 @@
         "print('\\nScore R-squared polinomica: ', score)"
       ],
       "metadata": {
-        "id": "MEjuDGKC-7k1",
-        "outputId": "54d84e3b-9862-4275-eca6-c90f552af610",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MEjuDGKC-7k1",
+        "outputId": "54d84e3b-9862-4275-eca6-c90f552af610"
       },
       "execution_count": 92,
       "outputs": [
@@ -3752,11 +3752,11 @@
       ],
       "metadata": {
         "id": "HnUTdtMc3Ljf",
-        "outputId": "6999f486-1a25-4183-bac0-b930dd3fd09e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "outputId": "6999f486-1a25-4183-bac0-b930dd3fd09e"
       },
       "execution_count": 101,
       "outputs": [
@@ -3927,11 +3927,11 @@
       ],
       "metadata": {
         "id": "FAjefR6aE-2x",
-        "outputId": "ccd93577-979b-4b28-ab6e-82b0fc87f45d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144
-        }
+        },
+        "outputId": "ccd93577-979b-4b28-ab6e-82b0fc87f45d"
       },
       "execution_count": 104,
       "outputs": [
@@ -4113,10 +4113,10 @@
       ],
       "metadata": {
         "id": "0swj5MBoaodC",
-        "outputId": "f8f7a63b-7000-4a12-e708-1611cac9b34b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f8f7a63b-7000-4a12-e708-1611cac9b34b"
       },
       "execution_count": 95,
       "outputs": [
@@ -4171,10 +4171,10 @@
       ],
       "metadata": {
         "id": "m_O_NL2xahSF",
-        "outputId": "3b8bd3ed-037d-4208-a1a2-8d7babf82ef1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b8bd3ed-037d-4208-a1a2-8d7babf82ef1"
       },
       "execution_count": 96,
       "outputs": [
@@ -4230,11 +4230,11 @@
         "print(modelo.summary())"
       ],
       "metadata": {
-        "id": "2DhF-z4zE0s5",
-        "outputId": "50838d8c-03b4-4dba-d8b2-cc2764456dcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2DhF-z4zE0s5",
+        "outputId": "50838d8c-03b4-4dba-d8b2-cc2764456dcd"
       },
       "execution_count": 114,
       "outputs": [
@@ -4278,12 +4278,12 @@
         "analisisGraficoResiduos(Y_test, predicciones)"
       ],
       "metadata": {
-        "id": "lPeFUMjDFHwb",
-        "outputId": "da70f89d-b93b-4139-b06f-645b7b23c249",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 582
-        }
+        },
+        "id": "lPeFUMjDFHwb",
+        "outputId": "da70f89d-b93b-4139-b06f-645b7b23c249"
       },
       "execution_count": 116,
       "outputs": [
@@ -4309,6 +4309,54 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "trans = PolynomialFeatures(degree=2)\n",
+        "X_train_Polinomica = trans.fit_transform(X_train)\n",
+        "\n",
+        "poly_modelo = LinearRegression()\n",
+        "poly_modelo.fit(X_train_Polinomica, Y_train)\n",
+        "\n",
+        "y_train_predicted_poly = poly_modelo.predict(X_train_Polinomica)\n",
+        "y_test_predicted_poly = poly_modelo.predict(trans.fit_transform(X_test))\n"
+      ],
+      "metadata": {
+        "id": "_mRBeSh4HHe8"
+      },
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Imprimimos los estadisticos\n",
+        "print(poly_modelo .summary())"
+      ],
+      "metadata": {
+        "id": "aKm5G1PQHOYa",
+        "outputId": "faa862eb-636e-4bc2-e0c6-73764de43ee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-121-87ad37fdcab8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Imprimimos los estadisticos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoly_modelo\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'LinearRegression' object has no attribute 'summary'"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Información de sesión"
@@ -4328,11 +4376,11 @@
       ],
       "metadata": {
         "id": "gODn13HPuS2r",
-        "outputId": "3cf43f37-ec03-46df-9302-26830ac42cad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        }
+        },
+        "outputId": "3cf43f37-ec03-46df-9302-26830ac42cad"
       },
       "execution_count": 97,
       "outputs": [
